--- a/0 - consulta.ipynb
+++ b/0 - consulta.ipynb
@@ -1,18 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a07ea294",
+   "metadata": {},
+   "source": [
+    "CELULA DE IMPORT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fd98913c",
+   "execution_count": 2,
+   "id": "8396623a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from path_arquivos import *\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(ar_csv.ar_07, names= col_name.c07)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "593b1236",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING *** OLE2 inconsistency: SSCS size is 0 but SSAT size is non-zero\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -34,163 +47,61 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESCRICAO</th>\n",
+       "      <th>DEP</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>EMBALAGEM</th>\n",
+       "      <th>CAP</th>\n",
+       "      <th>P_REP</th>\n",
+       "      <th>QTDE_O.S</th>\n",
+       "      <th>PICKING</th>\n",
+       "      <th>PULMAO</th>\n",
+       "      <th>ENDERECO</th>\n",
+       "      <th>GERENCIAL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>473128</td>\n",
-       "      <td>BALAS REGALIZ FINI 80GR TUBES MORANGO</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>CX</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>898</td>\n",
-       "      <td>862</td>\n",
-       "      <td>843</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>544</td>\n",
-       "      <td>30</td>\n",
-       "      <td>90</td>\n",
-       "      <td>-454</td>\n",
-       "      <td>-83.455882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>473164</td>\n",
-       "      <td>BALAS GELAT FINI 80GR SAPO</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>CX</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>796</td>\n",
-       "      <td>661</td>\n",
-       "      <td>658</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>390</td>\n",
-       "      <td>26</td>\n",
-       "      <td>78</td>\n",
-       "      <td>-312</td>\n",
-       "      <td>-80.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>473177</td>\n",
-       "      <td>CHICLE FINI 80GR OVOS DINOSSAURO</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>CX</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>967</td>\n",
-       "      <td>883</td>\n",
-       "      <td>885</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>390</td>\n",
-       "      <td>32</td>\n",
-       "      <td>96</td>\n",
-       "      <td>-294</td>\n",
-       "      <td>-75.384615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>473126</td>\n",
-       "      <td>BALAS GELAT FINI 80GR URSINHOS</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>CX</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>1022</td>\n",
-       "      <td>826</td>\n",
-       "      <td>792</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>390</td>\n",
-       "      <td>33</td>\n",
-       "      <td>99</td>\n",
-       "      <td>-291</td>\n",
-       "      <td>-74.615385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>473163</td>\n",
-       "      <td>BALAS GELAT FINI 80GR POLVO</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>CX</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>36</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102</td>\n",
-       "      <td>869</td>\n",
-       "      <td>196</td>\n",
-       "      <td>563</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>390</td>\n",
-       "      <td>24</td>\n",
-       "      <td>72</td>\n",
-       "      <td>-318</td>\n",
-       "      <td>-81.538462</td>\n",
+       "      <th>42424</th>\n",
+       "      <td>474778</td>\n",
+       "      <td>LA ACO BOMBRIL 6UN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>PT/0020/UN</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4349</td>\n",
+       "      <td>209</td>\n",
+       "      <td>4.558,00</td>\n",
+       "      <td>4.467,00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       0                                      1           2   3   4   5   6   \\\n",
-       "0  473128  BALAS REGALIZ FINI 80GR TUBES MORANGO  CX/0012/UN  CX   1  13  32   \n",
-       "1  473164             BALAS GELAT FINI 80GR SAPO  CX/0012/UN  CX   1  13  34   \n",
-       "2  473177       CHICLE FINI 80GR OVOS DINOSSAURO  CX/0012/UN  CX   1  13  30   \n",
-       "3  473126         BALAS GELAT FINI 80GR URSINHOS  CX/0012/UN  CX   1  13  32   \n",
-       "4  473163            BALAS GELAT FINI 80GR POLVO  CX/0012/UN  CX   1  13  36   \n",
+       "          COD           DESCRICAO  DEP   RUA  PREDIO  NIVEL   APTO  \\\n",
+       "42424  474778  LA ACO BOMBRIL 6UN  1.0  16.0     5.0    1.0  101.0   \n",
        "\n",
-       "   7    8     9    10   11             12   13  14  15   16         17  \n",
-       "0   1  102   898  862  843  INTEIRO(1,90)  544  30  90 -454 -83.455882  \n",
-       "1   1  102   796  661  658  INTEIRO(1,90)  390  26  78 -312 -80.000000  \n",
-       "2   1  101   967  883  885  INTEIRO(1,90)  390  32  96 -294 -75.384615  \n",
-       "3   1  101  1022  826  792  INTEIRO(1,90)  390  33  99 -291 -74.615385  \n",
-       "4   1  102   869  196  563  INTEIRO(1,90)  390  24  72 -318 -81.538462  "
+       "        EMBALAGEM   CAP  P_REP  QTDE_O.S PICKING PULMAO  ENDERECO GERENCIAL  \n",
+       "42424  PT/0020/UN  32.0    8.0        10    4349    209  4.558,00  4.467,00  "
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import BASE as bs\n",
-    "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel(bs.path.p_1782, header= None)\n",
-    "df.head()"
+    "display(df.loc[df[\"COD\"] == 474778])\n"
    ]
   }
  ],
@@ -210,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
