add validação de o.s, add end vs ger

--- a/OUTROS/Consulta.ipynb
+++ b/OUTROS/Consulta.ipynb
@@ -10,67 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "8396623a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
     "\n",
-    "df_pd = pd.read_excel(ar_xlsx.ar_28)\n",
-    "df_func = pd.read_excel(ar_xlsx.ar_func, sheet_name= 'FUNCIONARIOS')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "593b1236",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['MATRICULA', 'NOME', 'CHAPA', 'TIPO'], dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['CODFILIAL', 'NUMOS', 'DATA', 'HORA', 'CODPROD', 'DESCRICAO',\n",
-       "       'ENDERECO_ORIG', 'RUA', 'PREDIO', 'NIVEL', 'APTO', 'ENDERECO_DEST',\n",
-       "       'RUA_1', 'PREDIO_1', 'NIVEL_1', 'APTO_1', 'QT', 'NUMTRANSWMS',\n",
-       "       'CODROTINA', 'POSICAO', 'CODFUNCGER', 'FUNCGER', 'DTFIMOS', 'CODFUNCOS',\n",
-       "       'FUNCOSFIM', 'DTESTORNO', 'CODFUNCESTORNO', 'FUNCESTORNO', 'Tipo O.S.',\n",
-       "       'TIPOABAST'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(df_func.columns)\n",
-    "display(df_pd.columns)"
+    "df = pd.read_excel(output.val_baixa, sheet_name= 'FIM_MESA')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bbdf5b8",
+   "id": "94d76d99",
    "metadata": {},
    "outputs": [],
    "source": []
