ajustando script end_vs_ger

--- a/OUTROS/Consulta.ipynb
+++ b/OUTROS/Consulta.ipynb
@@ -10,24 +10,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "8396623a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel(output.val_baixa, sheet_name= 'FIM_MESA')"
+    "df_prod = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'QTUNITCX', 'CAPACIDADE', 'PONTOREPOSICAO','QTTOTPAL'])\n",
+    "df_f18 = pd.read_excel(ar_xls.fl_18, usecols= ['Código', 'Estoque'])\n",
+    "df = pd.read_csv(ar_csv.ar_07, header=None, names= col_name.c07)\n",
+    "\n",
+    "df = df[df['RUA'].between(1, 39)]\n",
+    "df = df.merge(df_prod, left_on= 'COD', right_on= 'CODPROD', how= 'inner').drop(columns= 'CODPROD')\n",
+    "df = df.merge(df_f18, left_on= 'COD', right_on='Código', how= 'left').drop(columns= 'Código')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "94d76d99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COD</th>\n",
+       "      <th>DESCRICAO</th>\n",
+       "      <th>DEP</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>EMBALAGEM</th>\n",
+       "      <th>CAP</th>\n",
+       "      <th>P_REP</th>\n",
+       "      <th>QTDE_O.S</th>\n",
+       "      <th>PICKING</th>\n",
+       "      <th>PULMAO</th>\n",
+       "      <th>ENDERECO</th>\n",
+       "      <th>GERENCIAL</th>\n",
+       "      <th>QTUNITCX</th>\n",
+       "      <th>QTTOTPAL</th>\n",
+       "      <th>CAPACIDADE</th>\n",
+       "      <th>PONTOREPOSICAO</th>\n",
+       "      <th>Estoque</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3201</td>\n",
+       "      <td>ADOC ZERO CAL CICLAMATO 100ML</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>CX/0012/UN</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108</td>\n",
+       "      <td>248</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>358.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>352</td>\n",
+       "      <td>396</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3301</td>\n",
+       "      <td>ADOC ZERO CAL CICLAMATO 200ML</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>CX/0012/UN</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>168</td>\n",
+       "      <td>56</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3601</td>\n",
+       "      <td>AGUA SANITARIA Q-BOA 1LT</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>CX/0012/UN</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>211</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>84</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3801</td>\n",
+       "      <td>AGUA SANITARIA Q-BOA 5LT</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>CX/0003/UN</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>330</td>\n",
+       "      <td>364.0</td>\n",
+       "      <td>355.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>56</td>\n",
+       "      <td>56</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5501</td>\n",
+       "      <td>ARAME ZINCADO MORLAN N 020 F 0,89</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>PT/0010/UN</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>90</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10057</th>\n",
+       "      <td>475377</td>\n",
+       "      <td>SABAO LIQ OMO CICLO RAP 1,4LT AC CUIDADO</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>UN/0001/UN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-81.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>85</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10058</th>\n",
+       "      <td>475378</td>\n",
+       "      <td>SABAO LIQ OMO CICLO RAP 750ML AC CUIDADO</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>UN/0001/UN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>582.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>72</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10059</th>\n",
+       "      <td>475379</td>\n",
+       "      <td>SABAO LIQ OMO CICLO RAP 1,4LT ACAO TOTAL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>203.0</td>\n",
+       "      <td>UN/0001/UN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>85</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10060</th>\n",
+       "      <td>475380</td>\n",
+       "      <td>SABAO LIQ OMO CICLO RAP 750ML ACAO TOTAL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>UN/0001/UN</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>603</td>\n",
+       "      <td>5184</td>\n",
+       "      <td>5787.0</td>\n",
+       "      <td>5830.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10061</th>\n",
+       "      <td>475440</td>\n",
+       "      <td>BALAS GELAT FINI 80GR FAZENDO ARTE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>CX/0012/UN</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>2177.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>364</td>\n",
+       "      <td>390</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10062 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          COD                                 DESCRICAO  DEP   RUA  PREDIO  \\\n",
+       "0        3201             ADOC ZERO CAL CICLAMATO 100ML  1.0   3.0    24.0   \n",
+       "1        3301            ADOC ZERO CAL CICLAMATO 200ML   1.0   3.0    91.0   \n",
+       "2        3601                  AGUA SANITARIA Q-BOA 1LT  1.0  22.0    13.0   \n",
+       "3        3801                  AGUA SANITARIA Q-BOA 5LT  1.0  22.0    12.0   \n",
+       "4        5501         ARAME ZINCADO MORLAN N 020 F 0,89  1.0  25.0    45.0   \n",
+       "...       ...                                       ...  ...   ...     ...   \n",
+       "10057  475377  SABAO LIQ OMO CICLO RAP 1,4LT AC CUIDADO  1.0  26.0    50.0   \n",
+       "10058  475378  SABAO LIQ OMO CICLO RAP 750ML AC CUIDADO  1.0  26.0    46.0   \n",
+       "10059  475379  SABAO LIQ OMO CICLO RAP 1,4LT ACAO TOTAL  1.0  26.0    60.0   \n",
+       "10060  475380  SABAO LIQ OMO CICLO RAP 750ML ACAO TOTAL  1.0  26.0    29.0   \n",
+       "10061  475440        BALAS GELAT FINI 80GR FAZENDO ARTE  1.0  13.0    58.0   \n",
+       "\n",
+       "       NIVEL   APTO   EMBALAGEM    CAP  P_REP  QTDE_O.S PICKING PULMAO  \\\n",
+       "0        1.0  102.0  CX/0012/UN  396.0   79.0         1     108    248   \n",
+       "1        1.0  101.0  CX/0012/UN   56.0   14.0         0       0      0   \n",
+       "2        1.0  101.0  CX/0012/UN   84.0   14.0         5      11    211   \n",
+       "3        1.0  102.0  CX/0003/UN   56.0   14.0         5      34    330   \n",
+       "4        1.0  101.0  PT/0010/UN   90.0    9.0         0      89      0   \n",
+       "...      ...    ...         ...    ...    ...       ...     ...    ...   \n",
+       "10057    1.0  201.0  UN/0001/UN    8.0    1.0         1     -81      0   \n",
+       "10058    1.0  202.0  UN/0001/UN    8.0    1.0         2      29      0   \n",
+       "10059    1.0  203.0  UN/0001/UN    8.0    1.0         1      44      0   \n",
+       "10060    1.0  101.0  UN/0001/UN   72.0   12.0         3     603   5184   \n",
+       "10061    1.0  101.0  CX/0012/UN  390.0   26.0        20      -7      0   \n",
+       "\n",
+       "       ENDERECO  GERENCIAL  QTUNITCX  QTTOTPAL  CAPACIDADE  PONTOREPOSICAO  \\\n",
+       "0         356.0      358.0         1       352         396              79   \n",
+       "1           0.0        0.0         1       168          56              14   \n",
+       "2         222.0      224.0         1        70          84              14   \n",
+       "3         364.0      355.0         1        56          56              14   \n",
+       "4          89.0       89.0         1        90          90               9   \n",
+       "...         ...        ...       ...       ...         ...             ...   \n",
+       "10057     -81.0       69.0         6        85           8               1   \n",
+       "10058      29.0      582.0        12        72           8               1   \n",
+       "10059      44.0       68.0         6        85           8               1   \n",
+       "10060    5787.0     5830.0        12        72          72              12   \n",
+       "10061      -7.0     2177.0         1       364         390              26   \n",
+       "\n",
+       "       Estoque  \n",
+       "0          0.0  \n",
+       "1          0.0  \n",
+       "2          0.0  \n",
+       "3          0.0  \n",
+       "4          0.0  \n",
+       "...        ...  \n",
+       "10057      0.0  \n",
+       "10058      0.0  \n",
+       "10059      0.0  \n",
+       "10060      0.0  \n",
+       "10061      0.0  \n",
+       "\n",
+       "[10062 rows x 20 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "col = ['ENDERECO', 'GERENCIAL']\n",
+    "for coluna in col:\n",
+    "    df[coluna] = df[coluna].str.replace('.' , '') \n",
+    "    df[coluna] = df[coluna].str.replace(',', '.').astype(float)\n",
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
