--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4e24968f",
    "metadata": {},
    "outputs": [],
@@ -10,15 +10,14 @@
     "from path_arquivos import *\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(ar_csv.ar_end, header= None,  usecols= [0,1,2,3,4, 6, 7, 18,19])\n",
-    "\n",
-    "df.columns = ['COD_END', 'RUA', 'PREDIO', 'NIVEL', 'APTO', 'COD', 'DESC', 'ENTREDA', 'SAIDA']"
+    "df = pd.read_excel(r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\6.1.5 - Relatório Cheio x vazio\\_CHEIO\\Cheio 28-08.xlsx', header= None, sheet_name= 'RELATORIO')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "65bb4754",
+   "execution_count": 11,
+   "id": "baa3f5b5",
    "metadata": {},
    "outputs": [
     {
@@ -42,107 +41,208 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>COD_END</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>NIVEL</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESC</th>\n",
-       "      <th>ENTREDA</th>\n",
-       "      <th>SAIDA</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1000235</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>401</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>CHEIO X VAZIO  | DATA: 28/08/205</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1000129</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>301</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1000024</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <th>2</th>\n",
+       "      <td>END</td>\n",
+       "      <td>COD</td>\n",
+       "      <td>DESCRIÇÃO</td>\n",
+       "      <td>RUA</td>\n",
+       "      <td>PREDIO</td>\n",
+       "      <td>NIVEL</td>\n",
+       "      <td>APTO</td>\n",
+       "      <td>ENTRADA</td>\n",
+       "      <td>SAIDA</td>\n",
+       "      <td>Retorno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1023430</td>\n",
+       "      <td>449375</td>\n",
+       "      <td>COLORAU DON PEPPE 2KG</td>\n",
+       "      <td>12</td>\n",
        "      <td>2</td>\n",
-       "      <td>202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1000131</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>301</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1000239</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>401</td>\n",
+       "      <td>60</td>\n",
        "      <td>0</td>\n",
-       "      <td>&lt;VAZIO&gt;</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1021306</td>\n",
+       "      <td>163901</td>\n",
+       "      <td>TEMPERO MAGGI 1100GR PO FONDOR COMPLETO</td>\n",
+       "      <td>12</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>301</td>\n",
+       "      <td>294</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>1041594</td>\n",
+       "      <td>464235</td>\n",
+       "      <td>FRALDA BABYSEC GALIN PINT HIPER XG 56UN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>502</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1035664</td>\n",
+       "      <td>215100</td>\n",
+       "      <td>CREME D COLGATE 90GR MPA</td>\n",
+       "      <td>19</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3</td>\n",
+       "      <td>301</td>\n",
+       "      <td>432</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>1046117</td>\n",
+       "      <td>464234</td>\n",
+       "      <td>FRALDA BABYSEC GALIN PINT HIPER G 60UN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>50</td>\n",
+       "      <td>6</td>\n",
+       "      <td>601</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>1041625</td>\n",
+       "      <td>464234</td>\n",
+       "      <td>FRALDA BABYSEC GALIN PINT HIPER G 60UN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>61</td>\n",
+       "      <td>5</td>\n",
+       "      <td>501</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>1041626</td>\n",
+       "      <td>456776</td>\n",
+       "      <td>FRALDA MAMYPOKO CALCA AM DN HIPER XG 42</td>\n",
+       "      <td>19</td>\n",
+       "      <td>61</td>\n",
+       "      <td>5</td>\n",
+       "      <td>502</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>SEM RETORNO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>104 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    COD_END  RUA  PREDIO  NIVEL  APTO  COD       DESC  ENTREDA  SAIDA\n",
-       "4   1000235    1       1      4   401    0   <VAZIO>         0      0\n",
-       "10  1000129    1       3      3   301    0   <VAZIO>         0      0\n",
-       "17  1000024    1       5      2   202    0   <VAZIO>         0      0\n",
-       "18  1000131    1       5      3   301    0   <VAZIO>         0      0\n",
-       "20  1000239    1       5      4   401    0   <VAZIO>         0      0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "COD_END     int64\n",
-       "RUA         int64\n",
-       "PREDIO      int64\n",
-       "NIVEL       int64\n",
-       "APTO        int64\n",
-       "COD         int64\n",
-       "DESC       object\n",
-       "ENTREDA     int64\n",
-       "SAIDA       int64\n",
-       "dtype: object"
+       "                                    0       1  \\\n",
+       "0    CHEIO X VAZIO  | DATA: 28/08/205     NaN   \n",
+       "1                                 NaN     NaN   \n",
+       "2                                 END     COD   \n",
+       "3                             1023430  449375   \n",
+       "4                             1021306  163901   \n",
+       "..                                ...     ...   \n",
+       "99                            1041594  464235   \n",
+       "100                           1035664  215100   \n",
+       "101                           1046117  464234   \n",
+       "102                           1041625  464234   \n",
+       "103                           1041626  456776   \n",
+       "\n",
+       "                                           2    3       4      5     6  \\\n",
+       "0                                        NaN  NaN     NaN    NaN   NaN   \n",
+       "1                                        NaN  NaN     NaN    NaN   NaN   \n",
+       "2                                  DESCRIÇÃO  RUA  PREDIO  NIVEL  APTO   \n",
+       "3                      COLORAU DON PEPPE 2KG   12       2      4   401   \n",
+       "4    TEMPERO MAGGI 1100GR PO FONDOR COMPLETO   12      20      3   301   \n",
+       "..                                       ...  ...     ...    ...   ...   \n",
+       "99   FRALDA BABYSEC GALIN PINT HIPER XG 56UN   19      45      5   502   \n",
+       "100                 CREME D COLGATE 90GR MPA   19      47      3   301   \n",
+       "101   FRALDA BABYSEC GALIN PINT HIPER G 60UN   19      50      6   601   \n",
+       "102   FRALDA BABYSEC GALIN PINT HIPER G 60UN   19      61      5   501   \n",
+       "103  FRALDA MAMYPOKO CALCA AM DN HIPER XG 42   19      61      5   502   \n",
+       "\n",
+       "           7      8            9  \n",
+       "0        NaN    NaN          NaN  \n",
+       "1        NaN    NaN          NaN  \n",
+       "2    ENTRADA  SAIDA      Retorno  \n",
+       "3         60      0  SEM RETORNO  \n",
+       "4        294      0  SEM RETORNO  \n",
+       "..       ...    ...          ...  \n",
+       "99        42      0  SEM RETORNO  \n",
+       "100      432      0  SEM RETORNO  \n",
+       "101       16      0  SEM RETORNO  \n",
+       "102       42      0  SEM RETORNO  \n",
+       "103        0      0  SEM RETORNO  \n",
+       "\n",
+       "[104 rows x 10 columns]"
       ]
      },
      "metadata": {},
@@ -150,14 +250,7 @@
     }
    ],
    "source": [
-    "cheio = df.loc[df['COD'] != 0]\n",
-    "cheio = cheio.loc[(cheio['ENTREDA'] == 0) & (cheio['SAIDA'] == 0)]\n",
-    "\n",
-    "vazio = df.loc[df['COD'] == 0]\n",
-    "\n",
-    "display(vazio.head())\n",
-    "display(vazio.dtypes)\n",
-    "\n"
+    "display(df)"
    ]
   }
  ],
