--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,21 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4e24968f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    }
+   ],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "df = pd.read_excel(r'z:\\1 - CD Dia\\4 - Equipe PCL\\6.1 - Inteligência Logística\\6.1.5 - Relatório Cheio x vazio\\_CHEIO\\Cheio 28-08.xlsx', header= None, sheet_name= 'RELATORIO')\n",
+    "df_8596 = pd.read_excel(ar_xlsx.ar_96, usecols= ['CODPROD', 'DESCRICAO','OBS2', 'RUA', 'PREDIO', 'APTO', ])\n",
+    "df_286 = pd.read_excel(ar_xls.ar_86, usecols= ['Código', 'Estoque', 'Qtde Pedida', 'Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria', 'Custo real', 'Disponível'])\n",
+    "\n",
+    "df = df_8596.merge(df_286, left_on= 'CODPROD', right_on= 'Código', how= 'inner')\n",
+    "df = df[df['RUA'].between(1, 40)]\n",
+    "df['BLOQ + AV'] = df['Bloqueado(Qt.Bloq.-Qt.Avaria)'] + df['Qt.Avaria']\n",
+    "df['BLOQ?'] = np.where(df['BLOQ + AV'] >= df['Estoque'], 'S', 'N')\n",
+    "df['total_custo'] = df['Custo real'] * df['Disponível']\n",
+    "\n",
+    "df = df.drop(columns=[\"Código\", \"Bloqueado(Qt.Bloq.-Qt.Avaria)\", \"Qt.Avaria\"])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "baa3f5b5",
    "metadata": {},
    "outputs": [
@@ -41,83 +60,101 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>CODPROD</th>\n",
+       "      <th>DESCRICAO</th>\n",
+       "      <th>OBS2</th>\n",
+       "      <th>RUA</th>\n",
+       "      <th>PREDIO</th>\n",
+       "      <th>APTO</th>\n",
+       "      <th>Estoque</th>\n",
+       "      <th>Qtde Pedida</th>\n",
+       "      <th>Disponível</th>\n",
+       "      <th>Custo real</th>\n",
+       "      <th>BLOQ + AV</th>\n",
+       "      <th>BLOQ?</th>\n",
+       "      <th>total_custo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CHEIO X VAZIO  | DATA: 28/08/205</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>86</th>\n",
+       "      <td>422950</td>\n",
+       "      <td>ABS INTIMUS GEL SUAVE S/ABAS 08UN</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>53</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.702667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>97</th>\n",
+       "      <td>469639</td>\n",
+       "      <td>ABS PROT DIA INTIMUS DAYS 15UN IND PH</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>62</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.030592</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>END</td>\n",
-       "      <td>COD</td>\n",
-       "      <td>DESCRIÇÃO</td>\n",
-       "      <td>RUA</td>\n",
-       "      <td>PREDIO</td>\n",
-       "      <td>NIVEL</td>\n",
-       "      <td>APTO</td>\n",
-       "      <td>ENTRADA</td>\n",
-       "      <td>SAIDA</td>\n",
-       "      <td>Retorno</td>\n",
+       "      <th>99</th>\n",
+       "      <td>467799</td>\n",
+       "      <td>ABS PROT DIARIO DIANA 40UN</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>63</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.324375</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1023430</td>\n",
-       "      <td>449375</td>\n",
-       "      <td>COLORAU DON PEPPE 2KG</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>401</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>112</th>\n",
+       "      <td>463202</td>\n",
+       "      <td>ABS SYM PREMIUM COB SECA C/ABAS 08UN</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>33</td>\n",
+       "      <td>101</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.950717</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1021306</td>\n",
-       "      <td>163901</td>\n",
-       "      <td>TEMPERO MAGGI 1100GR PO FONDOR COMPLETO</td>\n",
-       "      <td>12</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3</td>\n",
-       "      <td>301</td>\n",
-       "      <td>294</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>137</th>\n",
+       "      <td>469877</td>\n",
+       "      <td>ACETONA LIMPS 95ML</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>25</td>\n",
+       "      <td>53</td>\n",
+       "      <td>104</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>25.500333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>4998.065268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -131,118 +168,136 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>1041594</td>\n",
-       "      <td>464235</td>\n",
-       "      <td>FRALDA BABYSEC GALIN PINT HIPER XG 56UN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>45</td>\n",
-       "      <td>5</td>\n",
-       "      <td>502</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>13770</th>\n",
+       "      <td>468632</td>\n",
+       "      <td>WHISKY LAPHROAIG QUARTER CASK 750ML</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>202</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>374.833333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1874.166665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>1035664</td>\n",
-       "      <td>215100</td>\n",
-       "      <td>CREME D COLGATE 90GR MPA</td>\n",
-       "      <td>19</td>\n",
-       "      <td>47</td>\n",
-       "      <td>3</td>\n",
-       "      <td>301</td>\n",
-       "      <td>432</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>13785</th>\n",
+       "      <td>461835</td>\n",
+       "      <td>WHISKY WHITE HORSE 700ML</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>105</td>\n",
+       "      <td>201</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.571474</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>1046117</td>\n",
-       "      <td>464234</td>\n",
-       "      <td>FRALDA BABYSEC GALIN PINT HIPER G 60UN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>50</td>\n",
-       "      <td>6</td>\n",
-       "      <td>601</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>13915</th>\n",
+       "      <td>469197</td>\n",
+       "      <td>XAROPE MONIN 700ML AVELA</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>107</td>\n",
+       "      <td>105</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34.175385</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>1041625</td>\n",
-       "      <td>464234</td>\n",
-       "      <td>FRALDA BABYSEC GALIN PINT HIPER G 60UN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>61</td>\n",
-       "      <td>5</td>\n",
-       "      <td>501</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>13937</th>\n",
+       "      <td>469198</td>\n",
+       "      <td>XAROPE MONIN 700ML MANGA</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>106</td>\n",
+       "      <td>203</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34.200000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>1041626</td>\n",
-       "      <td>456776</td>\n",
-       "      <td>FRALDA MAMYPOKO CALCA AM DN HIPER XG 42</td>\n",
-       "      <td>19</td>\n",
-       "      <td>61</td>\n",
-       "      <td>5</td>\n",
-       "      <td>502</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SEM RETORNO</td>\n",
+       "      <th>13938</th>\n",
+       "      <td>469200</td>\n",
+       "      <td>XAROPE MONIN 700ML MAPLE SPICE</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>93</td>\n",
+       "      <td>103</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>34.200000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>239.400000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104 rows × 10 columns</p>\n",
+       "<p>724 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    0       1  \\\n",
-       "0    CHEIO X VAZIO  | DATA: 28/08/205     NaN   \n",
-       "1                                 NaN     NaN   \n",
-       "2                                 END     COD   \n",
-       "3                             1023430  449375   \n",
-       "4                             1021306  163901   \n",
-       "..                                ...     ...   \n",
-       "99                            1041594  464235   \n",
-       "100                           1035664  215100   \n",
-       "101                           1046117  464234   \n",
-       "102                           1041625  464234   \n",
-       "103                           1041626  456776   \n",
+       "       CODPROD                              DESCRICAO OBS2  RUA  PREDIO  APTO  \\\n",
+       "86      422950      ABS INTIMUS GEL SUAVE S/ABAS 08UN   FL   19      53   102   \n",
+       "97      469639  ABS PROT DIA INTIMUS DAYS 15UN IND PH   FL   19      62   104   \n",
+       "99      467799             ABS PROT DIARIO DIANA 40UN   FL   19      63   104   \n",
+       "112     463202   ABS SYM PREMIUM COB SECA C/ABAS 08UN   FL   19      33   101   \n",
+       "137     469877                     ACETONA LIMPS 95ML   FL   25      53   104   \n",
+       "...        ...                                    ...  ...  ...     ...   ...   \n",
+       "13770   468632    WHISKY LAPHROAIG QUARTER CASK 750ML   FL   13      10   202   \n",
+       "13785   461835               WHISKY WHITE HORSE 700ML   FL    7     105   201   \n",
+       "13915   469197               XAROPE MONIN 700ML AVELA   FL    7     107   105   \n",
+       "13937   469198               XAROPE MONIN 700ML MANGA   FL    7     106   203   \n",
+       "13938   469200         XAROPE MONIN 700ML MAPLE SPICE   FL    7      93   103   \n",
        "\n",
-       "                                           2    3       4      5     6  \\\n",
-       "0                                        NaN  NaN     NaN    NaN   NaN   \n",
-       "1                                        NaN  NaN     NaN    NaN   NaN   \n",
-       "2                                  DESCRIÇÃO  RUA  PREDIO  NIVEL  APTO   \n",
-       "3                      COLORAU DON PEPPE 2KG   12       2      4   401   \n",
-       "4    TEMPERO MAGGI 1100GR PO FONDOR COMPLETO   12      20      3   301   \n",
-       "..                                       ...  ...     ...    ...   ...   \n",
-       "99   FRALDA BABYSEC GALIN PINT HIPER XG 56UN   19      45      5   502   \n",
-       "100                 CREME D COLGATE 90GR MPA   19      47      3   301   \n",
-       "101   FRALDA BABYSEC GALIN PINT HIPER G 60UN   19      50      6   601   \n",
-       "102   FRALDA BABYSEC GALIN PINT HIPER G 60UN   19      61      5   501   \n",
-       "103  FRALDA MAMYPOKO CALCA AM DN HIPER XG 42   19      61      5   502   \n",
+       "       Estoque  Qtde Pedida  Disponível  Custo real  BLOQ + AV BLOQ?  \\\n",
+       "86         0.0          0.0         0.0   12.702667        0.0     S   \n",
+       "97         0.0          0.0         0.0    4.030592        0.0     S   \n",
+       "99         0.0          0.0         0.0    5.324375        0.0     S   \n",
+       "112       14.0          0.0         0.0    2.950717       14.0     S   \n",
+       "137      196.0          0.0       196.0   25.500333        0.0     N   \n",
+       "...        ...          ...         ...         ...        ...   ...   \n",
+       "13770      5.0          0.0         5.0  374.833333        0.0     N   \n",
+       "13785      3.0          0.0         0.0   33.571474        3.0     S   \n",
+       "13915      0.0          0.0         0.0   34.175385        0.0     S   \n",
+       "13937      0.0          0.0         0.0   34.200000        0.0     S   \n",
+       "13938      8.0          0.0         7.0   34.200000        0.0     N   \n",
        "\n",
-       "           7      8            9  \n",
-       "0        NaN    NaN          NaN  \n",
-       "1        NaN    NaN          NaN  \n",
-       "2    ENTRADA  SAIDA      Retorno  \n",
-       "3         60      0  SEM RETORNO  \n",
-       "4        294      0  SEM RETORNO  \n",
-       "..       ...    ...          ...  \n",
-       "99        42      0  SEM RETORNO  \n",
-       "100      432      0  SEM RETORNO  \n",
-       "101       16      0  SEM RETORNO  \n",
-       "102       42      0  SEM RETORNO  \n",
-       "103        0      0  SEM RETORNO  \n",
+       "       total_custo  \n",
+       "86        0.000000  \n",
+       "97        0.000000  \n",
+       "99        0.000000  \n",
+       "112       0.000000  \n",
+       "137    4998.065268  \n",
+       "...            ...  \n",
+       "13770  1874.166665  \n",
+       "13785     0.000000  \n",
+       "13915     0.000000  \n",
+       "13937     0.000000  \n",
+       "13938   239.400000  \n",
        "\n",
-       "[104 rows x 10 columns]"
+       "[724 rows x 13 columns]"
       ]
      },
      "metadata": {},
@@ -250,7 +305,12 @@
     }
    ],
    "source": [
-    "display(df)"
+    "df_os_esquecidos = df.loc[(df['OBS2'] == 'FL') & (df['Estoque'] > 0) & (df['BLOQ?'] == \"N\")]\n",
+    "df_fantasminha = df.loc[(df['OBS2'] == 'FL')]\n",
+    "df_hora_extra = df.loc[(df['OBS2'] != 'FL') & (df['Estoque'] == 0) & (df['Qtde Pedida'] == 0)]\n",
+    "\n",
+    "display(df.loc[df['OBS2'] == 'FL'])\n",
+    "\n"
    ]
   }
  ],
